es_systems.cfg: Fix some extensions

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -87,7 +87,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>atomiswave</name>
 		<fullname>Atomiswave</fullname>
 		<path>/storage/roms/atomiswave</path>
-		<extension>.bin .BIN .LST .lst .zip .ZIP .dat .DAT</extension>
+		<extension>.bin .BIN .LST .lst .dat .DAT .7z .7Z .zip .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO flycast %ROM% -PATOMISWAVE</command>
 		<platform>atomiswave</platform>
 		<theme>atomiswave</theme>
@@ -573,7 +573,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>sega32x</name>
 		<fullname>Sega 32X</fullname>
 		<path>/storage/roms/sega32x</path>
-		<extension>.zip .smd .SMD .md .MD .bin .BIN .7z .7Z .ZIP .32x .32X .iso .ISO</extension>
+		<extension>.zip .smd .SMD .md .MD .bin .BIN .7z .7Z .ZIP .32x .32X .iso .ISO .gen .GEN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO picodrive %ROM% -PSEGA32X</command>
 		<platform>sega32x</platform>
 		<theme>sega32x</theme>
@@ -582,7 +582,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>segacd</name>
 		<fullname>Sega CD</fullname>
 		<path>/storage/roms/segacd</path>
-		<extension>.cue .CUE .iso .ISO</extension>
+		<extension>.cue .CUE .iso .ISO .chd .CHD .zip .ZIP .7z .7Z</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PSEGACD</command>
 		<platform>segacd</platform>
 		<theme>segacd</theme>
@@ -618,7 +618,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>genesis</name>
 		<fullname>Sega Genesis</fullname>
 		<path>/storage/roms/genesis</path>
-		<extension>.zip .ZIP .md .MD</extension>
+		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD .gen .GEN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PGENESIS</command>
 		<platform>genesis</platform>
 		<theme>genesis</theme>
@@ -627,7 +627,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>genh</name>
 		<fullname>Sega Genesis Hacks</fullname>
 		<path>/storage/roms/genh</path>
-		<extension>.zip .ZIP .md .MD</extension>
+		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD .gen .GEN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PGENESIS</command>
 		<platform>genesis</platform>
 		<theme>genh</theme>
@@ -645,7 +645,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>megadrive</name>
 		<fullname>Sega Mega Drive</fullname>
 		<path>/storage/roms/megadrive</path>
-		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD</extension>
+		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD .gen .GEN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PMEGADRIVE</command>
 		<platform>megadrive</platform>
 		<theme>megadrive</theme>
@@ -654,7 +654,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>megadrive-japan</name>
 		<fullname>Sega Mega Drive Japan</fullname>
 		<path>/storage/roms/megadrive-japan</path>
-		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD</extension>
+		<extension>.zip .bin .BIN .gen .GEN .sg .SG .smd .SMD .7z .7Z .ZIP .md .MD .gen .GEN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PMEGADRIVE</command>
 		<platform>megadrive</platform>
 		<theme>megadrive-japan</theme>
