Option to set emulator per system/game
Per system: Press Start, game settings > advanced 
Per game: Select a game, Press SELECT, Advanced game options > Emulator

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -11,16 +11,17 @@ EE_CONF="${EE_DIR}/configs/emuelec.conf"
 ES_CONF="/storage/.emulationstation/es_settings.cfg"
 
 get_ee_setting() {
-# Argument $1 is the setting name, EmuELEC settings alway start with ee_ no need to pass it e.g. novideo
-	PAT="s|^ee_${1}=\(.*\)|\1|p"
-	EES=$(sed -n "${PAT}" "${EE_CONF}")
-	echo $EES
+# Argument $1 is the setting name, EmuELEC settings alway start with ee_ e.g. ee_novideo
+	PAT=$(printf %q "${1}")
+	PAT="^${PAT}=(.*)"
+	EES=$(cat "${EE_CONF}" | grep -oE "${PAT}")
+	echo "${EES##*=}"
 }
 
 set_ee_setting() {
 # argument $1 is the setting name e.g. nes.integerscale. $2 is the value, e.g "1"
-	sed -i '/^ee_$1 =/d' "${EE_CONF}"
-	[ $2 == "disable" ] && echo "#ee_${1}=" >> "${EE_CONF}" || echo "ee_${1}=${2}" >> "${EE_CONF}"
+	sed -i '/^$1=/d' "${EE_CONF}"
+	[ $2 == "disable" ] && echo "#${1}=" >> "${EE_CONF}" || echo "${1}=${2}" >> "${EE_CONF}"
 }
 
 set_audio() { 
