Change regex so that it works with all characters

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -12,7 +12,7 @@ ES_CONF="/storage/.emulationstation/es_settings.cfg"
 
 get_ee_setting() {
 # Argument $1 is the setting name, EmuELEC settings alway start with ee_ e.g. ee_novideo
-	PAT=$(printf %q "${1}")
+	PAT=$(echo ${1} | sed -e 's|\[|\\\[|g' | sed -e 's|\]|\\\]|g' | sed -e 's|(|\\\(|g' | sed -e 's|)|\\\)|g')
 	PAT="^${PAT}=(.*)"
 	EES=$(cat "${EE_CONF}" | grep -oE "${PAT}")
 	echo "${EES##*=}"
@@ -20,7 +20,7 @@ get_ee_setting() {
 
 set_ee_setting() {
 # argument $1 is the setting name e.g. nes.integerscale. $2 is the value, e.g "1"
-	sed -i '/^$1=/d' "${EE_CONF}"
+	sed -i '/$1=/d' "${EE_CONF}"
 	[ $2 == "disable" ] && echo "#${1}=" >> "${EE_CONF}" || echo "${1}=${2}" >> "${EE_CONF}"
 }
 
