--- a/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
@@ -1,22 +1,5 @@
 <?xml version="1.0"?>
 <string name="TransitionStyle" value="slide" />
-<string name="EmuELEC_AMIGA_CORE" value="AMIBERRY" />
-<string name="EmuELEC_ARCADE_CORE" value="Libretro_mame2003_plus" />
-<string name="EmuELEC_DOSBOX_CORE" value="DOSBOXSDL2" />
-<string name="EmuELEC_FBN_CORE" value="Libretro_fbneo" />
-<string name="EmuELEC_GBA_CORE" value="Libretro_mgba" />
-<string name="EmuELEC_GBC_CORE" value="Libretro_gambatte" />
-<string name="EmuELEC_GEN_CORE" value="Libretro_genesis_plus_gx" />
-<string name="EmuELEC_MAME_CORE" value="AdvanceMame" />
-<string name="EmuELEC_N64_CORE" value="Libretro_mupen64plus_next" />
-<string name="EmuELEC_NES_CORE" value="Libretro_nestopia" />
-<string name="EmuELEC_PSP_CORE" value="PPSSPPSA" />
-<string name="EmuELEC_REICAST_CORE" value="Libretro_flycast" />
-<string name="EmuELEC_SNES_CORE" value="Libretro_snes9x" />
-<string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
-<string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
-<string name="EmuELEC_HATARI_CORE" value="Libretro_hatari" />
-<string name="EmuELEC_SCUMMVM_CORE" value="SCUMMVMSA" />
 <string name="GamelistViewStyle" value="Carousel + Details" />
 <string name="FolderViewMode" value="having multiple games" />
-<string name="ThemeSet" value="es-theme-carbon" />
+<string name="ThemeSet" value="es-theme-EmuELEC-carbon" />
