Retroarch: Set audio to alsa when starting RA directly
This fixes #60

--- a/packages/sx05re/libretro/retroarch/system.d/retroarch.service
+++ b/packages/sx05re/libretro/retroarch/system.d/retroarch.service
@@ -7,7 +7,7 @@ Environment=DISPLAY=:0.0
 Environment=SDL_MOUSE_RELATIVE=0
 Environment=FB_MULTI_BUFFER=2
 Environment=HOME=/storage
-ExecStartPre=/usr/bin/emustation-config
+ExecStartPre=/usr/bin/emustation-config retroarch
 ExecStart=/usr/bin/retroarch
 KillMode=process
 TimeoutStopSec=3
