Select ra menu driver from emuelec.conf

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -80,6 +80,9 @@ updates.type=stable
 ## The global value will be used for all emulators, except if the value
 ## is redefined in the emulator
 
+## Retroarch menu driver, ozone (default), rgui or xmb 
+#global.retroarch.menu_driver=
+
 ## Shader set
 ## Automatically select shaders for all systems
 ## (none, retro, scanlines)
