Include ports (thanks to KEgg)
Note: No ROMS are included, you will need to add these to the proper path in /storage/roms/ports

Reminiscence (FLASHBACK) seems to not like shaders set by default in ES, will update if I find a workaround. 

Thanks to KEgg in discord, for the scripts and investigation!

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -740,4 +740,13 @@ All systems must be contained within the <systemList> tag.-->
 		<platform>psp</platform>
 		<theme>psp</theme>
 	</system>
+	<system>
+		<name>ports</name>
+		<fullname>Ports</fullname>
+		<path>/storage/.config/emuelec/ports</path>
+		<extension>.sh .SH</extension>
+		<command>/usr/bin/bash %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>ports</platform>
+		<theme>ports</theme>
+	</system>
 </systemList>
