Add ee_load.delay for slow mounting external drives

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -20,6 +20,9 @@ ee_splash.enabled=1
 ## Force splash screens to display for X seconds
 #ee_splash.delay=0
 
+## Some external HDDs take longer to mount than ES to load, if your external ROMS do not mount in time, increase this timer
+#ee_load.delay=0
+
 # Audio device to use, comment for auto, other options 0,0 (default) 0,1 (for some AV outputs)
 #ee_audio_device=auto
 
