Emuelec-emulationstation: Add pspminis

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -740,6 +740,15 @@ All systems must be contained within the <systemList> tag.-->
 		<platform>psp</platform>
 		<theme>psp</theme>
 	</system>
+		<system>
+		<name>pspminis</name>
+		<fullname>Sony Playstation Portable Minis</fullname>
+		<path>/storage/roms/pspminis</path>
+		<extension>.iso .ISO .cso .CSO .pbp .PBP</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>psp</platform>
+		<theme>psp</theme>
+	</system>
 	<system>
 		<name>ports</name>
 		<fullname>Ports</fullname>
