emuelec-emulationstation: add PSPminis theme

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -746,8 +746,8 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/pspminis</path>
 		<extension>.iso .ISO .cso .CSO .pbp .PBP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
-		<platform>psp</platform>
-		<theme>psp</theme>
+		<platform>pspminis</platform>
+		<theme>pspminis</theme>
 	</system>
 	<system>
 		<name>ports</name>
