--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -20,7 +20,7 @@ get_ee_setting() {
 
 set_ee_setting() {
 # argument $1 is the setting name e.g. nes.integerscale. $2 is the value, e.g "1"
-	sed -i '/$1=/d' "${EE_CONF}"
+	sed -i "/$1=/d" "${EE_CONF}"
 	[ $2 == "disable" ] && echo "#${1}=" >> "${EE_CONF}" || echo "${1}=${2}" >> "${EE_CONF}"
 }
 
