es_systems.cfg: Fix GBCH path

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -416,6 +416,15 @@ All systems must be contained within the <systemList> tag.-->
 		<platform>gbc</platform>
 		<theme>gbc</theme>
 	</system>
+		<system>
+		<name>gbch</name>
+		<fullname>Nintendo Game Boy Color Hacks</fullname>
+		<path>/storage/roms/gbch</path>
+		<extension>.gbc .GBC .zip .ZIP .7z .7Z</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>gbc</platform>
+		<theme>gbch</theme>
+	</system>
 	<system>
 		<name>gameandwatch</name>
 		<fullname>Nintendo Game and Watch</fullname>
