es_systems.cfg: Re-add missing extensions for Saturn

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -699,7 +699,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>saturn</name>
 		<fullname>Sega Saturn</fullname>
 		<path>/storage/roms/saturn</path>
-		<extension>.cue .CUE</extension>
+		<extension>.cue .CUE .chd .CHD .iso .ISO .zip .ZIP .7z .7Z</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>saturn</platform>
 		<theme>saturn</theme>
