Enable bezel globally, per system or per game
Note that the setting is now called global.bezel and not ee_bezels.enabled

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -12,7 +12,7 @@ ee_videomode=1080p60hz
 ee_boot=Emulationstation
 
 ## Enable retroarch bezels
-ee_bezels.enabled=0
+global.bezel=0
 
 ## Enable splash screens
 ee_splash.enabled=1
