--- a/packages/sx05re/emuelec/config/emuelec/configs/emuoptions.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuoptions.conf
@@ -6,6 +6,7 @@
 #snes.shaders=mysnesshader.gplsp
 #snes.ratio=16/9
 #snes.smooth=0
+#snes.bezel=0
 #snes.rewind=1
 #snes.autosave=0
 #snes.integerscale=0
