--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -131,12 +131,12 @@
   root preexec = mkdir -p /tmp/overlays
 
 [Bezels]
-  path = /tmp/overlays/bezels
+  path = /storage/roms/bezels
   available = yes
   browsable = yes
   public = yes
   writable = yes
-  root preexec = mkdir -p /tmp/overlays/bezels
+  root preexec = mkdir -p /storage/roms/bezels
 
 [Splash]
   path = /tmp/overlays/splash
