--- a/packages/sx05re/emulators/amiberry/config/conf/adfdir.conf
+++ b/packages/sx05re/emulators/amiberry/config/conf/adfdir.conf
@@ -27,4 +27,9 @@ Diskfile=
 MRUCDList=0
 Quickstart=1
 read_config_descriptions=yes
-
+swap_win_alt_keys=no
+gui_joystick_control=yes
+use_sdl2_render_thread=no
+input_default_mouse_speed=100
+input_keyboard_as_joystick_stop_keypresses=no
+default_open_gui_key=F12
