HatariSA: Use same bios path as libretro

--- a/packages/sx05re/emulators/hatarisa/config/conf/Atari-ST-default.cfg
+++ b/packages/sx05re/emulators/hatarisa/config/conf/Atari-ST-default.cfg
@@ -197,7 +197,7 @@ szIdeMasterHardDiskImage = /storage/.hatari
 szIdeSlaveHardDiskImage = /storage/.hatari
 
 [ROM]
-szTosImageFileName = /storage/roms/bios/AtariST/tos.img
+szTosImageFileName = /storage/roms/bios/tos.img
 bPatchTos = TRUE
 szCartridgeImageFileName =
 
