show_splash.sh: Change splash path and add global launching.mp4 support
new path is in /storage/roms/splash

--- a/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
+++ b/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
@@ -15,6 +15,7 @@ d    /storage/roms/atarijaguar          0777 root root - -
 d    /storage/roms/atarilynx            0777 root root - -
 d    /storage/roms/atarist              0777 root root - -
 d    /storage/roms/atomiswave           0777 root root - -
+d    /storage/roms/bezels               0777 root root - -
 d    /storage/roms/bios                 0777 root root - -
 d    /storage/roms/c128                 0777 root root - -
 d    /storage/roms/c16                  0777 root root - -
@@ -37,6 +38,7 @@ d    /storage/roms/gb                   0777 root root - -
 d    /storage/roms/gba                  0777 root root - -
 d    /storage/roms/gbah                 0777 root root - -
 d    /storage/roms/gbc                  0777 root root - -
+d    /storage/roms/gbch                  0777 root root - -
 d    /storage/roms/gbh                  0777 root root - -
 d    /storage/roms/genesis              0777 root root - -
 d    /storage/roms/genh                 0777 root root - -
@@ -76,6 +78,7 @@ d    /storage/roms/sg-1000              0777 root root - -
 d    /storage/roms/sgfx                 0777 root root - -
 d    /storage/roms/snes                 0777 root root - -
 d    /storage/roms/snesh                0777 root root - -
+d    /storage/roms/splash		        0777 root root - -
 d    /storage/roms/tg16                 0777 root root - -
 d    /storage/roms/tg16cd               0777 root root - -
 d    /storage/roms/vectrex              0777 root root - -
