Add EE_DEVICE variable
Easy way to distinguish between projects

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -9,6 +9,7 @@ export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/game
 EE_DIR="/storage/.config/emuelec"
 EE_CONF="${EE_DIR}/configs/emuelec.conf"
 ES_CONF="/storage/.emulationstation/es_settings.cfg"
+EE_DEVICE=$(cat /ee_arch)
 
 get_ee_setting() {
 # Argument $1 is the setting name, EmuELEC settings alway start with ee_ e.g. ee_novideo
