--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -355,7 +355,11 @@ CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
 # CONFIG_ZBUD is not set
 # CONFIG_ZSWAP is not set
-# CONFIG_ZSMALLOC is not set
+CONFIG_ZSMALLOC=y
+CONFIG_ZSMALLOC_STAT=n
+CONFIG_PGTABLE_MAPPING=y
+CONFIG_ZRAM=m
+CONFIG_ZRAM_DEBUG=n
 CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
