emuelec.conf: Introduce new option "ee_alsa.always"
This is a workaround for the people that have a weird bug that will make returning from a game really slow, it seems to be a pulseaudio  issue.

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -17,6 +17,9 @@ global.bezel=0
 ## Enable splash screens
 ee_splash.enabled=1
 
+## set to 1 if you have long loading times after quitting a game, you will lose sound mixing in ES 
+#ee_alsa.always=0
+
 ## Force splash screens to display for X seconds
 #ee_splash.delay=0
 
