--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -26,7 +26,7 @@ set_ee_setting() {
 }
 
 set_audio() { 
-${EE_DIR}/scripts/rr_audio.sh ${1}
+[ "$(get_ee_setting ee_alsa.always)" == 1 ] && ${EE_DIR}/scripts/rr_audio.sh alsa || ${EE_DIR}/scripts/rr_audio.sh ${1}
 }
 
 get_es_setting() { 
