Update es_systems.cfg (#110)
* Update es_systems.cfg

Add missing extensions for C64 (T64/t64)

* Update es_systems.cfg

Correct Final Burn neo platform to "arcade" for proper scraping

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -168,7 +168,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>c64</name>
 		<fullname>Commodore 64</fullname>
 		<path>/storage/roms/c64</path>
-		<extension>.d64 .D64 .zip .ZIP .7z .7Z</extension>
+		<extension>.d64 .D64 .zip .ZIP .7z .7Z .t64 .T64</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>c64</platform>
 		<theme>c64</theme>
@@ -233,7 +233,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/fbneo</path>
 		<extension>.7z .zip .7Z .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
-		<platform>fbn</platform>
+		<platform>arcade</platform>
 		<theme>fbn</theme>
 	</system>
 	<system>
