--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -26,7 +26,16 @@ set_ee_setting() {
 }
 
 set_audio() { 
-[ "$(get_ee_setting ee_alsa.always)" == 1 ] && ${EE_DIR}/scripts/rr_audio.sh alsa || ${EE_DIR}/scripts/rr_audio.sh ${1}
+if [ "${1}" == "default" ]; then
+	if [ "$EE_DEVICE" == "Amlogic" ]; then
+	[ "$(get_ee_setting ee_alsa.always)" == 1 ] && AUDIO="alsa" || AUDIO="pulseaudio" 
+	else
+		AUDIO="alsa"
+	fi
+else
+	AUDIO=${1}
+fi
+${EE_DIR}/scripts/rr_audio.sh ${AUDIO}
 }
 
 get_es_setting() { 
