Add Global hotkeys
Also introduce "odroidgoa_utils.sh" to control volume, brightess and audio output 

Global hotkeys are useful for OdroidGoAdvance, but could be implemented for other stuff in the future

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -29,6 +29,9 @@ ee_splash.enabled=1
 # Audio device to use, comment for auto, other options 0,0 (default) 0,1 (for some AV outputs)
 #ee_audio_device=auto
 
+# OdroidGoAdvance Brightness Level
+brightness.level=255
+
 ## EmulationStation menu style
 ## default -> default all options menu
 ## none -> no menu except the game search menu
@@ -57,8 +60,8 @@ wifi.enabled=0
 #wifi3.key=new key
 
 # ------------ C - Audio ------------ #
-## Set the audio device (auto, hdmi, jack)
-audio.device=default
+## Set the audio device (auto, hdmi, jack, speakers, headphones) mostly for OdroidGoAdvance
+audio.device=auto
 ## Set system volume (0..100)
 audio.volume=100
 ## Enable or disable system sounds in ES (0,1)
