Ports: add init_port and end_port
Makes it easy to add ports

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -10,6 +10,7 @@ EE_DIR="/storage/.config/emuelec"
 EE_CONF="${EE_DIR}/configs/emuelec.conf"
 ES_CONF="/storage/.emulationstation/es_settings.cfg"
 EE_DEVICE=$(cat /ee_arch)
+JSLISTENCONF="/emuelec/configs/jslisten.cfg"
 
 get_ee_setting() {
 # Argument $1 is the setting name, EmuELEC settings alway start with ee_ e.g. ee_novideo
@@ -40,4 +41,27 @@ ${EE_DIR}/scripts/rr_audio.sh ${AUDIO}
 
 get_es_setting() { 
 	echo $(sed -n "s|\s*<${1} name=\"${2}\" value=\"\(.*\)\" />|\1|p" ${ES_CONF})
+}
+
+init_port() {
+sed -i "2s|program=.*|program=\"/usr/bin/killall ${1}\"|" ${JSLISTENCONF}
+
+# If jslisten is running we kill it first so that it can reload the config file. 
+killall jslisten
+
+# JSLISTEN setup so that we can kill CGeniusExe using hotkey+start
+/storage/.emulationstation/scripts/configscripts/z_getkillkeys.sh
+/emuelec/bin/jslisten --mode hold &
+
+set_audio ${2}
+}
+
+end_port() {
+set_audio default
+
+# Kill jslisten, we don't need to but just to make sure, dot not kill if using OdroidGoAdvance
+[[ "$EE_DEVICE" != "OdroidGoAdvance" ]] && killall jslisten
+
+# for some reason head sometimes does not exit
+killall head
 }
