addition of Pokemini  (#125)
* KEgg VVVVVV icon update

* Pokemini add to build list

Added Pokemini to EmuELEC options libretro core list

* conflict resolve

pokemini and snes conflicted because a dual edit

* pokemini_libretro core added

* change options pokemini lpl

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -489,6 +489,15 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>virtualboy</theme>
 	</system>
 	<system>
+		<name>pokemini</name>
+		<fullname>Pokemon Mini</fullname>
+		<path>/storage/roms/pokemini</path>
+		<extension>.min .MIN .zip .ZIP .7z .7Z</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
+		<platform>pokemini</platform>
+		<theme>pokemini</theme>
+	</system>
+	<system>
 		<name>openbor</name>
 		<fullname>OpenBOR</fullname>
 		<path>/storage/roms/openbor</path>
