--- a/packages/sx05re/emuelec-emulationstation/system.d/emustation.service
+++ b/packages/sx05re/emuelec-emulationstation/system.d/emustation.service
@@ -9,7 +9,7 @@ Environment=HOME=/storage
 EnvironmentFile=/storage/.config/emulationstation/scripts/es_env.sh
 ExecStartPre=/usr/bin/emustation-config
 ExecStartPre=/usr/bin/killes.sh
-ExecStart=/usr/bin/emulationstation --log-path /storage/.config/emuelec/logs --screenrotate 3 --resolution 480 320
+ExecStart=/usr/bin/emulationstation --log-path /storage/.config/emuelec/logs
 KillMode=process
 TimeoutStopSec=3
 Restart=always
