--- a/packages/sx05re/emulationstation-addon/config/es_systems.cfg
+++ b/packages/sx05re/emulationstation-addon/config/es_systems.cfg
@@ -502,7 +502,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Phillips 3DO</fullname>
 		<path>/storage/roms/3do</path>
 		<extension>.iso .ISO .bin .BIN .chd .CHD .cue .CUE .zip .ZIP .7z .7Z</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO 4do %ROM% -P3DO</command>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO opera %ROM% -P3DO</command>
 		<platform>3do</platform>
 		<theme>3do</theme>
 	</system>
