--- a/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
@@ -1752,6 +1752,8 @@ CONFIG_RSI_DEBUGFS=y
 CONFIG_RSI_SDIO=m
 CONFIG_RSI_USB=m
 CONFIG_RTL8812AU=m
+CONFIG_RTL8822BU=m
+CONFIG_RTL8821CU=m
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
