Add missing ports directories

--- a/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
+++ b/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
@@ -90,4 +90,13 @@ d    /storage/roms/wonderswancolor      0777 root root - -
 d    /storage/roms/x68000               0777 root root - -
 d    /storage/roms/zx81                 0777 root root - -
 d    /storage/roms/zxspectrum           0777 root root - -
+d    /storage/roms/ports	           	0777 root root - -
+d    /storage/roms/ports/VVVVVV        	0777 root root - -
+d    /storage/roms/ports/quake	        0777 root root - -
+d    /storage/roms/ports/doom	        0777 root root - -
+d    /storage/roms/ports/doom2	        0777 root root - -
+d    /storage/roms/ports/cannonball     0777 root root - -
+d    /storage/roms/ports/CaveStory	    0777 root root - -
+d    /storage/roms/ports/reminiscence   0777 root root - -
+d    /storage/roms/ports/xrick			0777 root root - -
 d    /tmp/cache  
