--- a/packages/sx05re/emulationstation-addon/config/es_systems.cfg
+++ b/packages/sx05re/emulationstation-addon/config/es_systems.cfg
@@ -213,7 +213,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>daphne</name>
 		<fullname>Daphne</fullname>
 		<path>/storage/roms/daphne</path>
-		<extension>.zip .Zip .7z .7Z</extension>
+		<extension>.daphne .DAPHNE</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO daphne %ROM% -PDAPHNE</command>
 		<platform>daphne</platform>
 		<theme>daphne</theme>
