--- a/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
@@ -1754,6 +1754,8 @@ CONFIG_RSI_USB=m
 CONFIG_RTL8812AU=m
 CONFIG_RTL8822BU=m
 CONFIG_RTL8821CU=m
+CONFIG_ESP8089=m
+CONFIG_ESP8089_DEBUG_FS=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
