--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -8,16 +8,49 @@ export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/game
 
 EE_DIR="/storage/.config/emuelec"
 EE_CONF="${EE_DIR}/configs/emuelec.conf"
+EE_EMUCONF=/emuelec/configs/emuoptions.conf
 ES_CONF="/storage/.emulationstation/es_settings.cfg"
 EE_DEVICE=$(cat /ee_arch)
 JSLISTENCONF="/emuelec/configs/jslisten.cfg"
 
 get_ee_setting() {
 # Argument $1 is the setting name, EmuELEC settings alway start with ee_ e.g. ee_novideo
-	PAT=$(echo ${1} | sed -e 's|\[|\\\[|g' | sed -e 's|\]|\\\]|g' | sed -e 's|(|\\\(|g' | sed -e 's|)|\\\)|g')
-	PAT="^${PAT}=(.*)"
+# Usage: get_ee_setting setting [platform] [rom]
+# Only the setting argument is required 
+# Priority is: GAME, PLATFORM, GLOBAL, EE_SETTING if at any point one returns 0 it means its dissabled, if it returns empty it will continue onto the next one. 
+
+SETTING="${1}"
+PLATFORM="${2}"
+ROM="${3}"
+
+#ROM
+ROM=$(echo [\"${ROM}\"] | sed -e 's|\[|\\\[|g' | sed -e 's|\]|\\\]|g' | sed -e 's|(|\\\(|g' | sed -e 's|)|\\\)|g')
+PAT="^${PLATFORM}${ROM}[.-]${SETTING}=(.*)"
+	EES=$(cat "${EE_EMUCONF}" | grep -oE "${PAT}")
+	EES="${EES##*=}"
+
+if [ -z "${EES}" ]; then
+#PLATFORM
+PAT="^${PLATFORM}[.-]${SETTING}=(.*)"
+	EES=$(cat "${EE_EMUCONF}" | grep -oE "${PAT}")
+	EES="${EES##*=}"
+fi
+
+if [ -z "${EES}" ]; then
+#GLOBAL
+PAT="^global[.-]${SETTING}=(.*)"
 	EES=$(cat "${EE_CONF}" | grep -oE "${PAT}")
-	echo "${EES##*=}"
+	EES="${EES##*=}"
+fi
+
+if [ -z "${EES}" ]; then
+#EE_SETTINGS
+PAT="^${SETTING}=(.*)"
+	EES=$(cat "${EE_CONF}" | grep -oE "${PAT}")
+	EES="${EES##*=}"
+fi
+
+echo "${EES}"	
 }
 
 set_ee_setting() {
