Introduce maxperf setting
Supposedly it gives a small boost to some emulators, specially useful for Odroid Go Advance

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -2,6 +2,9 @@
 ## Enable SSH at boot
 ee_ssh.enabled=1
 
+## Use maxperf, enable max settings for GPU and performance governer, this setting can be set globally, per platform or per game on the ES menu
+global.maxperf=1
+
 ## Always show boot video
 #ee_bootvideo.enabled=0
 
