--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -98,3 +98,29 @@ set_audio default
 # for some reason head sometimes does not exit
 killall head
 }
+
+# used to change gov to performance or return to ondemand
+maxperf() {
+	
+	if [ "$EE_DEVICE" == "OdroidGoAdvance" ]; then
+		echo performance > /sys/devices/platform/ff400000.gpu/devfreq/ff400000.gpu/governor
+		echo performance > /sys/devices/platform/dmc/devfreq/dmc/governor
+		echo performance > /sys/devices/system/cpu/cpufreq/policy0/scaling_governor
+	else
+		echo "performance" > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+		echo "performance" > /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
+		echo 5 > /sys/class/mpgpu/cur_freq
+	fi
+}
+
+normperf() {
+	if [ "$EE_DEVICE" == "OdroidGoAdvance" ]; then
+		echo simple_ondemand > /sys/devices/platform/ff400000.gpu/devfreq/ff400000.gpu/governor
+		echo dmc_ondemand > /sys/devices/platform/dmc/devfreq/dmc/governor
+		echo interactive > /sys/devices/system/cpu/cpufreq/policy0/scaling_governor
+	else
+		echo "ondemand" > /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+		echo "ondemand" > /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
+		echo 1 > /sys/class/mpgpu/cur_freq
+	fi	
+}
