OdroidGoAdvance: Linux bump to 857cdf6

--- a/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/OdroidGoAdvance/linux/odroid-go-a-4.4/linux.aarch64.conf
@@ -3389,8 +3389,8 @@ CONFIG_USB_UAS=m
 # CONFIG_USBIP_CORE is not set
 # CONFIG_USB_MUSB_HDRC is not set
 # CONFIG_USB_DWC3 is not set
-CONFIG_USB_DWC2=y
-CONFIG_USB_DWC2_HOST=y
+CONFIG_USB_DWC2=m
+CONFIG_USB_DWC2_HOST=m
 
 #
 # Gadget/Dual-role mode requires USB Gadget support to be enabled
