Add uzebox to Emulationstation
Thanks to @BaltasarParreira

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -776,4 +776,13 @@ All systems must be contained within the <systemList> tag.-->
 		<platform>psp</platform>
 		<theme>pspminis</theme>
 	</system>
+	<system>
+		<name>uzebox</name>
+		<fullname>uzebox</fullname>
+		<path>/storage/roms/uzebox</path>
+		<extension>.uze .UZE .hex .HEX</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>    
+		<platform>uzebox</platform>
+		<theme>uzebox</theme>
+	</system>
 </systemList>
