Amlogic-ng: enable swap file support

--- a/projects/Amlogic-ng/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ng/linux/linux.aarch64.conf
@@ -49,7 +49,7 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="@DISTRONAME@"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
