[OGA]: RTL8812AU module and sleep mode  (#159)
* Added aircrack-ng RTL8812AU module for OGA
* Initial commit for sleep mode (rework hotkeys)
* Fixed USB dead and audio at max after resume
* update patches for latest emuelec-es commit
* Added fix for unconfigured keyboard

--- a/projects/Rockchip/devices/OdroidGoAdvance/packages/odroidgoa-utils/system.d/odroidgoa-headphones.service
+++ b/projects/Rockchip/devices/OdroidGoAdvance/packages/odroidgoa-utils/system.d/odroidgoa-headphones.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Odroid Go Advance headphone sense
+Description=Odroid Go Advance Headphone Sense
 ConditionPathExists=/dev/input/event1
 Before=emuelec.target
 
