Amlogic/Amlogic-ng: change meson-remote/ir handling The modules aren't built in anymore and are loaded now by modprobe so no reboot is needed anymore.

--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -1176,7 +1176,7 @@ CONFIG_AML_NAND_KEY=y
 CONFIG_AM_INPUT=y
 CONFIG_AM_SARADC=y
 CONFIG_MESON_NEW_INPUT_REMOTE=y
-CONFIG_NEW_AM_REMOTE=y
+CONFIG_NEW_AM_REMOTE=m
 CONFIG_MESON_INPUT_KEYBOARD=y
 # CONFIG_ADC_KEYPADS_AM is not set
 CONFIG_AML_GPIO_KEY=y
@@ -2419,7 +2419,7 @@ CONFIG_IR_RC5_SZ_DECODER=m
 CONFIG_IR_SANYO_DECODER=m
 CONFIG_IR_MCE_KBD_DECODER=m
 CONFIG_RC_DEVICES=y
-CONFIG_RC_ATI_REMOTE=y
+CONFIG_RC_ATI_REMOTE=m
 CONFIG_IR_IMON=m
 CONFIG_IR_MCEUSB=m
 CONFIG_IR_MESON=m
