Fix video paths

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -277,7 +277,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Media Player</fullname>
 		<path>/storage/roms/mplayer</path>
 		<extension>.mp4 .MP4 .mkv .MKV .avi .AVI .mov .MOV .wmv .WMV .m3u .M3U .mpg .MPG</extension>
-		<command>/usr/bin/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
+		<command>/emuelec/scripts/emuelecRunEmu.sh %ROM% -P%SYSTEM% --controllers="%CONTROLLERSCONFIG%"</command>
 		<platform>mplayer</platform>
 		<theme>mplayer</theme>
 	</system>
