Amlogic-ne: dtb.conf: add BuzzTV devices

--- a/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
@@ -1,4 +1,14 @@
 <dtb>
+  <multidtb name="s4_s905y4_buzztv_hd5.dtb" subdevice="">
+    <file>s4_s905y4_buzztv_hd5_2g.dtb</file>
+    <file>s4_s905y4_buzztv_hd5_4g.dtb</file>
+  </multidtb>
+  <multidtb name="sc2_s905x4_buzztv_x5.dtb" subdevice="">
+    <file>sc2_s905x4_buzztv_x5_2g.dtb</file>
+    <file>sc2_s905x4_buzztv_x5_2g_1gbit.dtb</file>
+    <file>sc2_s905x4_buzztv_x5_4g.dtb</file>
+    <file>sc2_s905x4_buzztv_x5_4g_1gbit.dtb</file>
+  </multidtb>
   <multidtb name="t7_a311d2_beelink_gt_king_ii.dtb" subdevice="">
     <file>t7_a311d2_beelink_gt_king_ii_4g.dtb</file>
     <file>t7_a311d2_beelink_gt_king_ii_8g.dtb</file>
