Move MSU1 so that it sorts with Nintendo

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -1282,8 +1282,8 @@ This file will be replaced on any new update of EmuELEC-->
 	</system>
 	<system>
 		<name>snesmsu1</name>
-		<fullname>Nintendo Super Nintendo MSU1</fullname>
-		<manufacturer>Near</manufacturer>
+		<fullname>Near's Super Nintendo MSU1</fullname>
+		<manufacturer>Nintendo - Near</manufacturer>
 		<release>2012</release>
 		<hardware>console</hardware>			
 		<path>/storage/roms/snesmsu1</path>
