sprd_sdio-firmware-aml.service: Execute only if exact path exists

--- a/projects/Amlogic-ce/packages/linux-drivers/amlogic/uwe5631-aml/system.d/sprd_sdio-firmware-aml.service
+++ b/projects/Amlogic-ce/packages/linux-drivers/amlogic/uwe5631-aml/system.d/sprd_sdio-firmware-aml.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Attach /dev/ttyBT0 to BlueZ stack using sprd type
+ConditionPathExists=/sys/class/mmc_host/sdio/sdio:8800
 Wants=bluetooth.service
 Before=bluetooth.service
 After=dev-ttyBT0.device
