tee: use appropriate files from Android supper partition
dmsetup create --concise "$(parse-android-dynparts /dev/super)"
mount -o ro /dev/mapper/dynpart-vendor_a /vendor
mount -o ro /dev/mapper/dynpart-system_a /system_a

tee_wrapper /vendor/bin/tee-supplicant &
tee_wrapper /vendor/bin/tee_preload_fw /vendor/lib/firmware/video/video_ucode.bin

umount /vendor
umount /system_a
dmsetup remove /dev/mapper/dynpart-*

--- a/projects/Amlogic-ce/packages/linux-drivers/amlogic/opentee_linuxdriver/system.d/opentee_linuxdriver.service
+++ b/projects/Amlogic-ce/packages/linux-drivers/amlogic/opentee_linuxdriver/system.d/opentee_linuxdriver.service
@@ -1,18 +1,12 @@
 [Unit]
-# load optee_linuxdriver if SoC is minimum SC2 (0x32) architecture
-Description=Optee TEE-Supplicant
-ConditionPathExists=/usr/sbin/tee-supplicant
-Before=video-firmware-preload.service
-Wants=video-firmware-preload.service
-DefaultDependencies=no
+Description=Optee TEE-Supplicant and Video Firmware Preload service
+Before=kodi.service
+After=local-fs.target
 
 [Service]
-ExecCondition=/bin/sh -c '[ $(awk \'/^Serial/ {printf "%%d", "0x" substr($3,0,2)}\' /proc/cpuinfo) -lt $(printf "%%d" "0x32") ] && echo 1 > $(realpath /sys/module/*tee/parameters/disable_flag) && exit 1 || exit 0'
-ExecStartPre=/sbin/modprobe -q optee_armtz
-ExecStart=/usr/sbin/tee-supplicant
-ExecStop=/bin/kill -KILL $MAINPID
-ExecStopPost=/sbin/modprobe -r optee_armtz
+RemainAfterExit=yes
+ExecStart=/usr/lib/coreelec/tee-loader start
+ExecStop=/usr/lib/coreelec/tee-loader stop
 
 [Install]
-WantedBy=video-firmware-preload.service
-RequiredBy=video-firmware-preload.service
+WantedBy=multi-user.target
