--- a/packages/sysutils/busybox/profile.d/98-busybox.conf
+++ b/packages/sysutils/busybox/profile.d/98-busybox.conf
@@ -18,3 +18,12 @@ case "$TERM" in
     export TERM="xterm"
     ;;
 esac
+
+# aliases for interactive shell
+case "$-" in
+ *i*)
+   alias ll="ls -alF"
+   alias h="history"
+   alias jc="journalctl --no-pager"
+   ;;
+esac
