busybox: add more aliases

--- a/packages/sysutils/busybox/profile.d/98-busybox.conf
+++ b/packages/sysutils/busybox/profile.d/98-busybox.conf
@@ -21,9 +21,11 @@ esac
 
 # aliases for interactive shell
 case "$-" in
- *i*)
-   alias ll="ls -alF"
-   alias h="history"
-   alias jc="journalctl --no-pager"
-   ;;
+  *i*)
+    alias ll="ls -alF"
+    alias h="history"
+    alias jc="journalctl --no-pager"
+    alias mf="mount -o remount,rw /flash"
+    alias umf="mount -o remount,ro /flash"
+    ;;
 esac
