fake_08: Introduce package
A Pico-8 player/emulator

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2063,6 +2063,11 @@ This file will be replaced on any new update of EmuELEC-->
                     <core default="true">Pico-8</core>
                 </cores>
             </emulator>
+			<emulator name="libretro">
+                <cores>
+                    <core>fake_08</core>
+                </cores>
+            </emulator>
         </emulators>
 	</system>
     <system>
