Remove lr-yabasanshiro, set YabasanshiroSA as default

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -1853,14 +1853,9 @@ This file will be replaced on any new update of EmuELEC-->
 		<platform>saturn</platform>
 		<theme>saturn</theme>
 		<emulators>
-			<emulator name="libretro">
-                <cores>
-                    <core default="true">yabasanshiro</core>
-                </cores>
-            </emulator>
 			<emulator name="yabasanshiro">
                 <cores>
-                    <core>yabasanshiroSA</core>
+                    <core default="true">yabasanshiroSA</core>
                 </cores>
             </emulator>
         </emulators>
