--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -2060,7 +2060,7 @@ This file will be replaced on any new update of EmuELEC-->
             </emulator>
 			<emulator name="libretro">
                 <cores>
-                    <core>fake_08</core>
+                    <core>fake08</core>
                 </cores>
             </emulator>
         </emulators>
