gptokeyb: Bump to 0c53a5c
 Force kill program if it doesn't end gracefully 
Also enable the use of killsignal in scripts

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -152,7 +152,12 @@ if pgrep gptokeyb -f; then
         killall gptokeyb
 fi
 
-gptokeyb 1 ${1} &
+if [ "${2}" ]; 
+    gptokeyb 1 ${1} -killsignal ${2} &
+else
+    gptokeyb 1 ${1} &
+fi
+
 set_audio ${2}
 cat /etc/motd > "$EE_LOG"
 }
