--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -152,7 +152,7 @@ if pgrep gptokeyb -f; then
         killall gptokeyb
 fi
 
-if [ "${2}" ]; 
+if [ "${2}" ]; then
     gptokeyb 1 ${1} -killsignal ${2} &
 else
     gptokeyb 1 ${1} &
