--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -14,28 +14,16 @@ ES_CONF="/storage/.emulationstation/es_settings.cfg"
 EE_DEVICE=$(cat /ee_arch)
 EE_LOG="/emuelec/logs/emuelec.log"
 
-
-check_hard_kill() {
-  PNAME="$1"
-  if [[ ! -z "$PNAME" ]] && [[ ! -z $(pgrep "$PNAME") ]]; then
-    killall -9 "$PNAME"
-  fi
-}
-
 # arg1, 1 = Hides, 0 = Show.
 hide_buffer ()
 {
   echo $1 > /sys/class/graphics/fb1/blank
 }
 
-blank_buffer()
-{
+blank_buffer() {
   # Blank the buffer.
-  echo 1 > /sys/class/graphics/fb1/blank
-  dd if=/dev/zero of=/dev/fb1 bs=8M > /dev/null 2>&1
-  echo 0 > /sys/class/graphics/fb1/blank
   echo 1 > /sys/class/graphics/fb0/blank
-  dd if=/dev/zero of=/dev/fb0 bs=32M > /dev/null 2>&1
+  dd if=/dev/zero of=/dev/fb0 bs=256K conv=sync,noerror,notrunc > /dev/null 2>&1
   echo 0 > /sys/class/graphics/fb0/blank
   [[ "$EE_DEVICE" == "Amlogic-ng" ]] && fbfix
 }
