Updating Virtual Jaguar and enabling it (#1068)
* Updating Virtual Jaguar and enabling it
Co-authored-by: Kelvfimer <calvarro@gmail.com>

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -241,6 +241,25 @@ This file will be replaced on any new update of EmuELEC-->
             </emulator>
         </emulators>
 	</system>
+        <system>
+                <name>atarijaguar</name>
+                <fullname>Atari Jaguar</fullname>
+                <manufacturer>Atari</manufacturer>
+                <release>1993</release>
+                <hardware>console</hardware>
+                <path>/storage/roms/atarijaguar</path>
+                <extension>.j64 .jag .J64 .JAG .zip</extension>
+                <command>emuelecRunEmu.sh %ROM% -P%SYSTEM% --core=%CORE% --emulator=%EMULATOR% --controllers="%CONTROLLERSCONFIG%"</command>
+                <platform>atarijaguar</platform>
+                <theme>atarijaguar</theme>
+                <emulators>
+                        <emulator name="libretro">
+                                <cores>
+                                        <core default="true">virtualjaguar</core>
+                                </cores>
+                        </emulator>
+                </emulators>
+        </system>
 	<system>
 		<name>atomiswave</name>
 		<fullname>Atomiswave</fullname>
