--- a/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
+++ b/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
@@ -13,6 +13,7 @@ d    /storage/roms/atari5200            0777 root root - -
 d    /storage/roms/atari7800            0777 root root - -
 d    /storage/roms/atari800             0777 root root - -
 d    /storage/roms/atarilynx            0777 root root - -
+d    /storage/roms/atarijaguar          0777 root root - -
 d    /storage/roms/atarist              0777 root root - -
 d    /storage/roms/atomiswave           0777 root root - -
 d    /storage/roms/bezels               0777 root root - -
